@@ -1,3 +1,8 @@
+2004-01-05  Carlos Garcia Campos <elkalmail@yahoo.es>
+
+	* disks-conf.in: get start-end cylinder/block for partitions 
+	in i386 and powerpc. Added support for empty partitions
+	
 2004-01-02  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
